# worklife

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  railway.toml
db/: schema.sql
scripts/: google_auth.py  seed_memory.py  test_calendar.py  test_gmail.py  test_whatsapp.py
src/: config.py  main.py
src/agents/: base.py  chief_of_staff.py  finance.py  logistics.py  research.py  travel.py
src/gateway/: mcp_server.py  message_parser.py  whatsapp.py
src/memory/: context.py  embeddings.py  store.py
src/tools/: calendar.py  crypto.py  gmail.py  scraper.py  stocks.py  web_search.py
src/utils/: anthropic_client.py  logger.py
tests/: test_agents.py  test_chief_of_staff.py  test_memory.py
